--- a/apps/web-app/src/app/features/completion-warn-dialog/completion-dialog.html
+++ b/apps/web-app/src/app/features/completion-warn-dialog/completion-dialog.html
@@ -1,4 +1,4 @@
-@if (!data.board.CompletionDateUtc) {
+@if (!data.board.CompletedAtUtc) {
 <h2 mat-dialog-title>Finishing the game</h2>
 <mat-dialog-content>
   <app-message [title]="'Reward'" [type]="'warning'">
