--- a/apps/web-app/src/app/pages/board-page/board-page.css
+++ b/apps/web-app/src/app/pages/board-page/board-page.css
@@ -1,10 +1,11 @@
 :host {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   height: 100%;
   overflow: auto;
   container: board-container / inline-size;
+  padding: 0 0.5rem 0.5rem 0.5rem;
 
   app-board-list-view {
     width: min(100cqw, 35.5rem);
@@ -71,20 +72,30 @@
     gap: 0.4rem;
   }
 
-  h1 {
-    font-size: larger;
-    font-weight: 500;
-    margin: 0;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  div.header {
+    align-self: center;
+    width: min(100cqw, 35.5rem);
+    position: sticky;
+    top: 0;
+    background: var(--mat-sys-surface);
+    z-index: 100;
+    padding: 0.5rem 0;
 
-    .trophy {
-      height: 1rem;
-      width: 1rem;
-      font-size: 1rem;
+    h1 {
+      font-size: larger;
+      font-weight: 500;
+      margin: 0;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      .trophy {
+        height: 1rem;
+        width: 1rem;
+        font-size: 1rem;
+      }
     }
   }
 
