--- a/apps/web-app/src/app/features/progress-circle/progress-circle.html
+++ b/apps/web-app/src/app/features/progress-circle/progress-circle.html
@@ -1,5 +1,5 @@
 <svg
-  role="img"
+  role="presentation"
   viewBox="0 0 100 100"
   style="--chart-green: {{ (green() / safeTotal()) * 360 }}deg;
                     --chart-yellow: {{ (yellow() / safeTotal()) * 360 }}deg;
