--- a/apps/web-app/src/app/pages/board-page/board-page.html
+++ b/apps/web-app/src/app/pages/board-page/board-page.html
@@ -4,8 +4,6 @@
     visible_local: "Local board, not visible or available for others and on other devices.",
     visible_unlisted: "Unlisted board, only visible to you and whoever you share the link with.",
     visible_public: "Public board, visible to those who visit your profile.",
-    grid_mode_grid: "Switch to list view",
-    grid_mode_list: "Switch to grid view",
     game_mode_bingo: "Bingo game mode with the goal of reaching a vertical, horizontal or diagonal pattern from marked tasks.",
     game_mode_todo: "TO-DO game mode with the goal of marking all tasks.",
     edit_button: "Edit the board name, game mode, deadline or delete it.", 
@@ -176,12 +174,13 @@
       </app-progress-circle>
       }
 
-      <button matIconButton (click)="toggleBoardHistoryDisplay()" [disabled]="!!pendingSelectCount()" aria-hidden="true">
+      <button matIconButton (click)="toggleBoardHistoryDisplay()" [disabled]="!!pendingSelectCount()"
+        [attr.aria-label]="(displayMode() === 'history' ? 'Close' : 'Open') + ' history'">
         <mat-icon>history</mat-icon>
       </button>
     </div>
 
-    <menu>
+    <menu aria-hidden="true">
       <button
         [matTooltip]="buttonLabel"
         attr.aria-label="{{ buttonLabel }}"
