--- a/apps/web-app/src/app/pages/board-page/board-page.html
+++ b/apps/web-app/src/app/pages/board-page/board-page.html
@@ -4,8 +4,6 @@
     visible_local: "Local board, not visible or available for others and on other devices.",
     visible_unlisted: "Unlisted board, only visible to you and whoever you share the link with.",
     visible_public: "Public board, visible to those who visit your profile.",
-    grid_mode_grid: "Switch to list view",
-    grid_mode_list: "Switch to grid view",
     game_mode_bingo: "Bingo game mode with the goal of reaching a vertical, horizontal or diagonal pattern from marked tasks.",
     game_mode_todo: "TO-DO game mode with the goal of marking all tasks.",
     edit_button: "Edit the board name, game mode, deadline or delete it.", 
@@ -14,13 +12,13 @@
 @let buttonLabel = 'Switch to ' + switchTo + ' view';
 @let totalCells = board().Cells.length;
 
-<div>
+<div class="header">
   <h1>
     @if (goalReached()) {
     <mat-icon
       fontSet="material-symbols-outlined"
       class="trophy"
-      [matTooltip]="'Goal reached on ' + (board().CompletionDateUtc | date : 'MMM dd, yyyy')"
+      [matTooltip]="'Goal reached on ' + (board().CompletedAtUtc | date : 'MMM dd, yyyy')"
       >trophy</mat-icon
     >
     }
@@ -37,7 +35,7 @@
       Save ({{ pendingSelectCount() }})
       <span class="cdk-visually-hidden">selected tasks as done</span>
     </button>
-    } @else if (!editMode()) {
+    } @else if (displayMode() !== 'edit' && displayMode() !== 'history') {
     <button
       matIconButton
       (click)="editBoard()"
@@ -45,7 +43,9 @@
       [matTooltip]="tooltips['edit_button']">
       <mat-icon>edit</mat-icon>
     </button>
-    } @else {
+    } @else if (displayMode() === 'history') {
+    <button mat-button (click)="displayMode.set('board')">Close history</button>
+    }@else {
     <button mat-button (click)="cancelChanges()">
       Cancel<span class="cdk-visually-hidden"> changes</span>
     </button>
@@ -59,16 +59,17 @@
   </menu>
 </div>
 
-@if (editMode()) {
+@if (displayMode() === 'edit') {
 <section class="edit" aria-label="Game actions and game edit form">
   <app-board-details-form
     [isLoggedIn]="board().Visibility !== 'local'"
     [gameFinished]="allChecked()"
     [board]="board()"
+    [traditionalOptionDisabled]="traditionalOptionDisabled()"
     [createMode]="false"></app-board-details-form>
 
-  @if (boardForm.getRawValue().GameMode === 'todo' ? !board().TodoGame.CompletionDateUtc :
-  !board().TraditionalGame.CompletionDateUtc) {
+  @if (boardForm.getRawValue().GameMode === 'todo' ? !board().TodoGame.CompletedAtUtc :
+  !board().TraditionalGame.CompletedAtUtc) {
   <app-deadline-reward-form [createMode]="false" [gameMode]="boardForm.getRawValue().GameMode">
   </app-deadline-reward-form>
   }
@@ -81,7 +82,7 @@
   >
   <button matButton disabled>Create copy</button>
 
-  @if(!!board().TraditionalGame.CompletionDateUtc && (!!board().TraditionalGame.CompletionReward ||
+  @if(!!board().TraditionalGame.CompletedAtUtc && (!!board().TraditionalGame.CompletionReward ||
   !!board().TraditionalGame.CompletionDeadlineUtc)) {
   <h4>Remove reward/deadline for completed traditional game</h4>
   <app-deadline-reward-form [createMode]="false" [gameMode]="'traditional'">
@@ -89,7 +90,7 @@
   }
 
   <!-- prettier-ignore -->
-  @if(!!board().TodoGame.CompletionDateUtc && (!!board().TodoGame.CompletionReward ||
+  @if(!!board().TodoGame.CompletedAtUtc && (!!board().TodoGame.CompletionReward ||
   !!board().TodoGame.CompletionDeadlineUtc)) {
   <h4>Remove reward/deadline for completed todo game</h4>
   <app-deadline-reward-form [createMode]="false" [gameMode]="'todo'"> </app-deadline-reward-form>
@@ -100,15 +101,17 @@
 }
 
 <div class="board-container">
-  @if (!editMode()) {
+  @if (displayMode() !== 'edit') {
   <ng-container *ngTemplateOutlet="boardInfo"></ng-container>
-  }
+  } @if (displayMode() === 'history') {
+  <app-board-history [board]="board()"></app-board-history>
+  } @if (displayMode() !== 'history') {
   <section aria-label="Board">
     <app-board [(cards)]="cells" [previewMode]="boardPreviewMode()"></app-board>
     @if (gridMode() === 'list') {
     <app-board-list-view
       [(cards)]="cells"
-      [disabled]="editMode() || goalReached()"
+      [disabled]="displayMode() !== 'board' || goalReached()"
       [groupBy]="groupingOption"></app-board-list-view>
     <div>
       Group by
@@ -120,6 +123,7 @@
     </div>
     }
   </section>
+  }
 </div>
 
 <ng-template #boardInfo>
@@ -151,48 +155,37 @@
       }
 
       <app-deadline-hourglass
-        [completionDate]="board().CompletionDateUtc"
+        [completionDate]="board().CompletedAtUtc"
         [deadlineDate]="board().CompletionDeadlineUtc"
       ></app-deadline-hourglass>
 
       @if (goalReached()) {
         <mat-icon fontSet="material-symbols-outlined" class="trophy"
-          [matTooltip]="'Goal reached on ' + (board().CompletionDateUtc | date : 'MMM dd, yyyy')"
+          [matTooltip]="'Goal reached on ' + (board().CompletedAtUtc | date : 'MMM dd, yyyy')"
           >trophy</mat-icon>
       } @else { 
-        <svg
-          role="img"
-          [attr.aria-label]="boardStats().checkedCells + '/' + totalCells + ' tasks marked as done'"
-          matTooltip="{{ boardStats().checkedCells + '/' + totalCells + ' tasks marked as done' }}"
-          viewBox="0 0 100 100"
-          width="24px"
-          height="24px"
-          style="--chart-green: {{ (boardStats().bingoCells / totalCells) * 360 }}deg;
-                    --chart-yellow: {{ (boardStats().checkedCells / totalCells) * 360 }}deg;
-                    --chart-blue: {{ ((boardStats().checkedCells + pendingSelectCount()) / totalCells) * 360 }}deg">
-          <defs>
-            <mask id="smallmask">
-              <circle cx="50" cy="50" r="45" fill="white" />
-              <circle cx="50" cy="50" r="30" />
-            </mask>
-          </defs>
-
-          <foreignObject x="0" y="0" width="100" height="100" mask="url(#smallmask)">
-            <div class="gradient" xmlns="http://www.w3.org/1999/xhtml"></div>
-          </foreignObject>
-        </svg>
+        <app-progress-circle 
+        [attr.aria-label]="boardStats().checkedCells + '/' + totalCells + ' tasks marked as done'"
+        [matTooltip]="boardStats().checkedCells + '/' + totalCells + ' tasks marked as done'"
+        [total]="totalCells"
+        [green]="boardStats().bingoCells"
+        [yellow]="boardStats().checkedCells"
+        [blue]="boardStats().checkedCells + pendingSelectCount()">
+      </app-progress-circle>
       }
 
-      <button matIconButton disabled (click)="(null)" aria-hidden="true">
+      <button matIconButton (click)="toggleBoardHistoryDisplay()" [disabled]="!!pendingSelectCount()"
+        [attr.aria-label]="(displayMode() === 'history' ? 'Close' : 'Open') + ' history'">
         <mat-icon>history</mat-icon>
       </button>
     </div>
 
-    <menu>
+    <menu aria-hidden="true">
       <button
         [matTooltip]="buttonLabel"
         attr.aria-label="{{ buttonLabel }}"
         matIconButton
+        [disabled]="displayMode() === 'history'"
         (click)="gridMode() === 'grid' ? gridMode.set('list') : gridMode.set('grid')">
         <mat-icon>{{ gridMode() === "grid" ? "list" : "grid_on" }}</mat-icon>
       </button>
