--- a/apps/web-app/src/app/features/completion-warn-dialog/completion-dialog.css
+++ b/apps/web-app/src/app/features/completion-warn-dialog/completion-dialog.css
@@ -18,6 +18,10 @@ app-message p {
   &:last-of-type {
     margin-block-end: 0;
   }
+
+  a {
+    text-decoration: underline;
+  }
 }
 
 mat-checkbox {
