--- a/apps/web-app/src/app/features/board/board.html
+++ b/apps/web-app/src/app/features/board/board.html
@@ -3,9 +3,10 @@
   @for (card of cards().slice(row * boardSize(), (row * boardSize() + boardSize())); track idx; let idx = $index) {
   @if (previewMode() === "indicator") {
   <mat-card
+    aria-hidden="true"
     [class.bg-green]="card.IsInBingoPattern"
     [class.bg-yellow]="!!card.CheckedDateUTC && !card.IsInBingoPattern"
-    [class.bg-blue]="card.Selected"></mat-card>
+    [class.bg-blue]="card.Selected">{{card.Selected ? "&#128949;" : ""}}</mat-card>
   } @else { @let actualIdx = idx + (boardSize() * row);
   <mat-card
     [class.bg-green]="card.IsInBingoPattern"
