--- a/apps/web-app/src/app/pages/board-setup-page/board-setup.css
+++ b/apps/web-app/src/app/pages/board-setup-page/board-setup.css
@@ -4,9 +4,7 @@
   h3 {
     margin: 0;
     text-align: center;
-    & img.icon {
-      vertical-align: text-top;
-    }
+    max-width: 50vw;
   }
 
   app-board-list-view {
@@ -22,6 +20,7 @@
     justify-content: space-between;
     min-width: min(50rem, 100%);
     margin: 0 auto;
+    gap: 0.5rem;
   }
 
   .overview-container {
