No tooltip on banner

--- a/apps/web-app/src/app/app.html
+++ b/apps/web-app/src/app/app.html
@@ -2,7 +2,7 @@
 
 <mat-toolbar role="banner">
     <a class="brand" [routerLink]="''">
-      <app-game-mode-icon [gameMode]="'traditional'"></app-game-mode-icon>
+      <app-game-mode-icon [gameMode]="'traditional'" [presentation]="true" aria-hidden="true"></app-game-mode-icon>
       TODO BINGO
     </a>
     <a>
