--- a/apps/web-app/src/app/features/game-mode-icon/game-mode-icon.html
+++ b/apps/web-app/src/app/features/game-mode-icon/game-mode-icon.html
@@ -1,5 +1,12 @@
 @if (gameMode() === 'todo') {
-<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 540 540" role="img" [attr.aria-label]="todoTooltip" [matTooltip]="todoTooltip">
+<svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24px"
+  height="24px"
+  viewBox="0 0 540 540"
+  role="img"
+  [attr.aria-label]="todoTooltip"
+  [matTooltip]="presentation() ? null : todoTooltip">
   <defs>
     <filter id="shadow">
       <feDropShadow dx="6" dy="6" stdDeviation="6" flood-opacity="0.8" />
@@ -20,7 +27,14 @@
       d="M102 191C94 189 51 189 43 191 23 195 6 213 1 234-0 243-0 286 1 296 6 317 23 335 43 339 52 341 93 341 102 339 123 335 140 317 144 296 146 286 146 243 144 234 140 213 123 195 102 191M102 1C94-1 51-0 43 1 23 6 6 24 1 45-0 54-0 97 1 106 6 128 23 145 43 150 52 152 93 152 102 150 123 145 140 128 144 106 146 97 146 54 144 45 140 24 123 6 102 1Z M284 380C276 378 233 378 225 380 204 385 187 402 183 424 181 433 181 476 183 485 188 506 204 524 225 529 234 530 275 530 284 529 305 524 321 506 326 485 328 476 328 433 326 424 321 402 305 385 284 380" />
   </g>
 </svg>
-} @else {<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 540 540" role="img" [attr.aria-label]="traditionalTooltip" [matTooltip]="traditionalTooltip">
+} @else {<svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24px"
+  height="24px"
+  viewBox="0 0 540 540"
+  role="img"
+  [attr.aria-label]="traditionalTooltip"
+  [matTooltip]="presentation() ? null : traditionalTooltip">
   <defs>
     <filter id="shadow">
       <feDropShadow dx="6" dy="6" stdDeviation="6" flood-opacity="0.8" />
@@ -39,4 +53,5 @@
       id="yellow"
       fill="#ffb300"
       d="M466 380C457 378 415 378 406 380 386 385 369 402 365 424 363 433 363 476 365 485 369 506 386 524 407 529 416 530 457 530 466 529 486 524 503 506 508 485 509 476 509 433 508 424 503 402 486 385 466 380M102 191C94 189 51 189 43 191 23 195 6 213 1 234-0 243-0 286 1 296 6 317 23 335 43 339 52 341 93 341 102 339 123 335 140 317 144 296 146 286 146 243 144 234 140 213 123 195 102 191" />
-  </g></svg>}
+  </g></svg
+>}
