Mobile device compatible selected symbol

--- a/apps/web-app/src/app/features/board/board.css
+++ b/apps/web-app/src/app/features/board/board.css
@@ -37,7 +37,8 @@
 
   &.indicator {
     mat-card {
-      align-items: center;
+      justify-content: end;
+      padding: 0;
     }
     --box-size: 2rem;
 
