--- a/apps/web-app/src/app/features/board-details-form/board-details-form.html
+++ b/apps/web-app/src/app/features/board-details-form/board-details-form.html
@@ -11,9 +11,7 @@
     <mat-hint> If you downsize the board, only the first x cells are kept </mat-hint>
     }
   </mat-form-field>
-  }
-  
-  @if (!gameFinished()) {
+  } @if (!gameFinished()) {
   <mat-form-field [subscriptSizing]="'dynamic'">
     <mat-label>Game mode</mat-label>
     <mat-select formControlName="GameMode">
@@ -32,6 +30,9 @@
   <mat-form-field [subscriptSizing]="'dynamic'">
     <mat-label>Name</mat-label>
     <input matInput placeholder="Enter board name" formControlName="Name" />
+    @if(boardForm.controls.Name.hasError("maxlength")) {
+    <mat-error> You can only enter 200 characters. </mat-error>
+    }
   </mat-form-field>
 
   @if (displayVisibilityInput()) {
